# timeseries-db

./: .gitignore  Cargo.toml  LICENSE  README.md
docker/: Dockerfile  docker-compose.yml
docs/: API.md  PERFORMANCE.md
examples/: basic_usage.rs  batch_insert.rs  performance_test.rs
scripts/: benchmark.sh  test.sh
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/db/: compression.rs  engine.rs  memtable.rs  mod.rs  sstable.rs
