[package]
name = "timeseries-db"
version = "0.1.0"
edition = "2021"
authors = ["老王 <w1355457260@gmail.com>"]
description = "高性能时序数据库，基于LSM-Tree存储引擎，支持Gorilla压缩和mmap零拷贝技术"
license = "MIT"
repository = "https://github.com/wzxzhuxi/timeseries-db"
keywords = ["timeseries", "database", "lsm-tree", "gorilla", "compression"]
categories = ["database", "compression"]

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# Web框架
axum = "0.7"

# 中间件和工具
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 内存映射
memmap2 = "0.9"

# 工具库
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "timeseries-db"
path = "src/main.rs"

[lib]
name = "timeseries_db"
path = "src/lib.rs"

